# multiseqex

./: .gitignore  Cargo.toml  README.md
docs/: testing.md  usage.md
featuredocs/: change-to-column-names.md
src/: main.rs
tests/: integration.rs
tests/fixtures/: regions.txt  sv_table_pos.csv  sv_table_range.tsv  table_pos.csv  table_range.csv  table_range.tsv  test.fa  test.fa.fai
