[package]
name = "multiseqex"
version = "0.1.0"
edition = "2024"
authors = ["Trent Zeng <trentzz.dev@gmail.com>"]
license = "MIT"
description = "Multi-sequence extractor from FASTA using FAI indexing, with parallelism and flexible region input formats."
repository = "https://github.com/trentzz/multiseqex"
homepage = "https://github.com/trentzz/multiseqex"
documentation = "https://github.com/trentzz/multiseqex"
readme = "README.md"
keywords = ["bioinformatics", "fasta", "faidx", "sequence", "parallel"]
categories = ["science", "command-line-utilities"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
csv = "1.3.1"
rayon = "1.11.0"

